Fixed Dark Mode Button margin-bottom

--- a/assets/style.css
+++ b/assets/style.css
@@ -173,6 +173,7 @@ footer a {
   justify-content: center;
   align-items: center;
   height: 1vh;
+  margin-bottom: 2rem;
 }
 
 .switch {
